# axum_leptos_zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
