[package]
name = "axum_leptos_zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum_leptos_zero2prod"

[dependencies]
axum = "0.8.3"
leptos = "0.7.8"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.15"
