[package]
name = "axum_leptos_zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum_leptos_zero2prod"

[dependencies]
axum = "0.8.3"
leptos = "0.7.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
sqlx-cli = { version = "0.8.3", features = [
  "native-tls",
  "postgres",
  "rustls",
] }

[dependencies.sqlx]
version = "0.8.3"
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.12.15"
